k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web-app-ci
  labels:
    app: go-web-app-ci
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-web-app-ci
  template:
    metadata:
      labels:
        app: go-web-app-ci
    spec:
      containers:
      - name: go-web-app-ci
        image: visala123/go-web-app-ci:v1
        ports:
        - containerPort: 8080
