k8s/manifests/service.yaml
# Service for the application
apiVersion: v1
kind: Service
metadata:
  name: go-web-app-ci
  labels:
    app: go-web-app-ci
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    selector:
    app: go-web-app-ci
  type: NodePort
